@@ -5,6 +5,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id "org.liquibase.gradle" version "2.0.2"
+	id 'com.google.cloud.tools.jib' version '2.5.0'
 }
 
 group = 'com.speech4j'
@@ -38,27 +39,34 @@ diffChangeLog {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+//JPA dependency for reducing of the boilerplate and making of the implementation of your persistence layer easier and faster.
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//Spring-security-crypto dependency for encode passwords
+	implementation 'org.springframework.security:spring-security-crypto'
+//Swagger dependency
+	implementation 'org.springdoc:springdoc-openapi-ui:1.3.0'
+//Postgres dependency
+	runtimeOnly 'org.postgresql:postgresql'
+//Json dependency for transferring credentials to db
+	implementation 'org.json:json:20190722'
+//Lombok dependencies
 	implementation 'org.projectlombok:lombok'
 	annotationProcessor "org.projectlombok:lombok"
-	implementation 'org.springframework.security:spring-security-crypto'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.3.0'
+//Liquibase dependencies
 	implementation 'org.liquibase:liquibase-core:3.8.9'
-	implementation 'org.json:json:20190722'
-
+	liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.8'
+	liquibaseRuntime sourceSets.main.runtimeClasspath
+//Testing dependencies
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testImplementation 'org.junit.jupiter:junit-jupiter-params'
 	testImplementation 'org.testcontainers:testcontainers'
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:postgresql'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 
-	liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:3.8'
-	liquibaseRuntime sourceSets.main.runtimeClasspath
 }
 
 test {
@@ -81,11 +89,32 @@ jacocoTestReport {
 		csv.enabled false
 	}
 }
-
 project.tasks["sonarqube"].dependsOn "jacocoTestReport"
 
 
-//===Liquibase configurations===
+jib {
+	from {
+		image = 'openjdk:11'
+	}
+	to {
+		image = "speech4j/${name}"
+		tags = ['1.0.0', 'latest']
+		auth {
+			username = System.getenv('DOCKER_ID')
+			password = System.getenv('DOCKER_PASSWORD')
+		}
+	}
+	container {
+		jvmFlags = ['--enable-preview']
+		volumes = ["/tmp"]
+	}
+}
+tasks.build.dependsOn tasks.jib
+
+
+/*
+*===Liquibase configurations===
+*/
 Properties properties = new Properties()
 Properties metadata = new Properties()
 metadata.load(new FileInputStream("src/main/resources/liquibase-metadata.properties"))
